Ajusta readme e documentação.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,9 @@ springwolf.plugin.sns.publishing.enabled=true
 springwolf.docket.servers.sns-server.protocol=sns
 springwolf.docket.servers.sns-server.host=http://localhost:4566
 
+springwolf.docket.servers.sqs-server.protocol=sqs
+springwolf.docket.servers.sqs-server.host=http://localhost:4566
+
 # Springwolf ui configuration
 springwolf.ui.enabled=true
 springwolf.ui.defaults.show-bindings=true
